--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -24,7 +24,7 @@
 
 .input__nav {
   width: 15rem;
-  height: 2.8rem;
+  height: 3.8rem;
   border-radius: 1.5rem;
   background: #f2f2f2;
   position: relative;
@@ -38,8 +38,21 @@
 .input__image {
   width: 2.5rem;
   position: relative;
+  right: -6.5rem;
+  border: none;
+  box-shadow: 0px 4px 4px 0px rgba(211, 225, 87, 0.205);
+}
 
-  right: -6rem;
+.input__image select {
+  border: none;
+}
+
+.select__tags {
+  border-radius: 20px;
+  margin-top: 1rem;
+  width: 40%;
+  height: 2rem;
+  padding-left: 0.5rem;
 }
 
 .div__button_save {
@@ -71,11 +84,11 @@
 @media (min-width: 500px) {
   .form__nav {
     max-width: 25rem;
-    margin-left: 3rem;
+    height: 9rem;
   }
   .input__nav {
     width: 100%;
-    height: 3.2rem;
+    height: 6rem;
     max-width: 500px;
     position: relative;
     top: 2.5rem;
@@ -85,11 +98,23 @@
     top: -0.5rem;
     left: 45%;
   }
+  .select__tags {
+    height: 4rem;
+  }
 }
 
 @media (min-width: 700px) {
   .div__nav {
     justify-content: left;
+  }
+  .form__nav {
+    margin-left: 3rem;
+    align-items: normal;
+  }
+  .input__image {
+    width: 3rem;
+    top: -0.5rem;
+    left: 90%;
   }
   .button__save_img {
     position: absolute;
