--- a/src/components/imageDetail/imageDetail.css
+++ b/src/components/imageDetail/imageDetail.css
@@ -1,10 +1,19 @@
 .div__container {
+  width: 100%;
+  max-width: 26rem;
+  margin: 0 auto;
   border-left: 2px solid #d84315;
   border-right: 2px solid #d84315;
   border-radius: 2.6rem 2.6rem 0rem 0rem;
 }
+.div__datas {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
 .div__container_img {
   width: 100%;
+  max-width: 26rem;
   height: 23rem;
   background-color: #d84315;
   display: flex;
@@ -63,6 +72,82 @@
 .img__options {
   width: 3rem;
   cursor: pointer;
+}
+.box {
+  margin: 0 auto;
+  margin-top: 20%;
+  transform: "translate(-50%, -50%)";
+  width: 60%;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  padding-left: 2rem;
+  background-color: #ffff;
+  border: "2px solid #d84315";
+  box-shadow: 24px;
+  border-radius: 20px;
+  box-shadow: 0px 1px 4px 0px #26a69a;
+}
+
+.form__edit {
+  display: flex;
+  flex-direction: column;
+  padding-right: 2rem;
+}
+
+.form__edit textarea,
+.form__edit input {
+  box-shadow: 0px 1px 4px 0px #26a69a;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+}
+
+.div__buttons_edit {
+  width: 100%;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.buttons__edit {
+  background: transparent;
+  width: 20px;
+}
+.buttons__edit img {
+  width: 3rem;
+  cursor: pointer;
+}
+
+@media (min-width: 700px) {
+  .div__container {
+    width: 100%;
+    max-width: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: none;
+  }
+  .div__datas {
+    flex-direction: row;
+  }
+  .div__container_img {
+    width: 60%;
+    max-width: none;
+    margin-left: 2rem;
+  }
+  .img__details {
+    max-width: none;
+  }
+
+  .div__text_ccontainer {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+  }
+  .div__extent {
+    align-items: normal;
+  }
 }
 
 .vibrate-1:hover {
