--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,19 +40,29 @@
   position: relative;
   right: -6.5rem;
   border: none;
-  box-shadow: 0px 4px 4px 0px rgba(211, 225, 87, 0.205);
+  box-shadow: 0px 4px 4px 0px rgba(211, 225, 87, 0.384);
 }
 
 .input__image select {
   border: none;
 }
-
+.input__nav_display {
+  display: none;
+}
 .select__tags {
   border-radius: 20px;
   margin-top: 1rem;
   width: 40%;
   height: 2rem;
   padding-left: 0.5rem;
+  cursor: pointer;
+}
+
+.link__home {
+  font-size: 3rem;
+  text-decoration: none;
+  color: rgb(211, 225, 87);
+  font-weight: 800;
 }
 
 .div__button_save {
