--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -31,7 +31,7 @@
   top: 2.5rem;
   box-shadow: 0px 4px 4px 0px rgba(211, 225, 87, 0.205);
   padding-left: 2rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: rgb(85, 85, 85);
 }
 
@@ -230,5 +230,26 @@
   100% {
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
+  }
+}
+
+.text-shadow-drop-center:hover {
+  -webkit-animation: text-shadow-drop-center 0.6s both;
+  animation: text-shadow-drop-center 0.6s both;
+}
+@-webkit-keyframes text-shadow-drop-center {
+  0% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    text-shadow: 0 0 18px rgba(0, 0, 0, 0.35);
+  }
+}
+@keyframes text-shadow-drop-center {
+  0% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    text-shadow: 0 0 18px rgba(0, 0, 0, 0.35);
   }
 }
