--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@
 }
 .div__nav {
   width: 100%;
-  background-color: #26a69a;
+  background-color: #000000;
   box-shadow: 0px 4px 4px 0px #26a69a;
   display: flex;
   justify-content: center;
